force-app/main/default/objects/ItensNotaFiscal__c/ItensNotaFiscal__c.object-meta.xml
<CustomObject>
    <label>Itens da Nota Fiscal</label>
    <nameField>
        <label>Itens da Nota Fiscal Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Itens das Notas Fiscais</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>