force-app/main/default/objects/ItensNotaFiscal__c/fields/Batch__c.field-meta.xml
<CustomField>
    <fullName>Batch__c</fullName>
    <label>Lote</label>
    <length>40</length>
    <required>true</required>
    <type>Text</type>
</CustomField>