force-app/main/default/objects/ItensNotaFiscal__c/fields/CFOP__c.field-meta.xml
<CustomField>
    <fullName>CFOP__c</fullName>
    <label>CFOP</label>
    <length>100</length>
    <type>Text</type>
</CustomField>