force-app/main/default/objects/ItensNotaFiscal__c/fields/Invoice__c.field-meta.xml
<CustomField>
    <fullName>Invoice__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Nota Fiscal</label>
    <referenceTo>NotaFiscal__c</referenceTo>
    <relationshipLabel>Itens das Notas Fiscais</relationshipLabel>
    <relationshipName>Itens_das_Notas_Fiscais</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>