force-app/main/default/objects/ItensNotaFiscal__c/fields/Productcode__c.field-meta.xml
<CustomField>
    <fullName>Productcode__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Código Do Produto</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Itens das Notas Fiscais</relationshipLabel>
    <relationshipName>Itens_das_Notas_Fiscais</relationshipName>
    <type>Lookup</type>
</CustomField>