force-app/main/default/objects/ItensNotaFiscal__c/fields/Theamount__c.field-meta.xml
<CustomField>
    <fullName>Theamount__c</fullName>
    <label>Quantidade</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>