force-app/main/default/objects/ItensNotaFiscal__c/fields/Unitaryvalue__c.field-meta.xml
<CustomField>
    <fullName>Unitaryvalue__c</fullName>
    <label>Valor Unitário</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>